Colaboratory を使用して作成しました課題でございます。

--- a/Pytest.ipynb
+++ b/Pytest.ipynb
@@ -6,7 +6,7 @@
       "name": "Pytest.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNwm7JyQFVKC9FBPdoeywFh",
+      "authorship_tag": "ABX9TyPomBEvW2iGpwinapdV0z57",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,6 +111,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#正直に申し上げますと、以下You○ubeを見ながら作ったものになります。\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
